k8s/gitops/infra/azure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-ns
spec:
  gatewayClassName: cilium

  addresses:
  - type: IPAddress
    value: "${GATEWAY_LB_FRONTEND_IP}"
    
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
